# valorant-predictor

./: .gitignore  ASSUMPTIONS.md  Dockerfile  LOG.md  MODEL_CARD.md  Makefile  README.md  WALKTHROUGH.md  pyproject.toml  render.yaml
frontend/: index.html  package-lock.json  package.json
memprof-out/: growth-summary-posttrim.json  growth-summary-pretrim.json  harness-full-6796.json  harness-growth-3400.json  harness-growth-5100.json  harness-item2-retrain-predict104.json  harness-item2-steady-predict104.json  harness-item2-true-steady-predict104.json  harness-mac-post-trim.json  harness-pilot-1700.json  harness-pilot2-1700.json  harness-trim-1700.json  harness-trim-3400.json  harness-trim-5100.json  harness-trim-full-6796.json  memprof-full-6796.json  memprof-growth-3400.json  memprof-growth-5100.json  memprof-item2-retrain-predict104.json  memprof-item2-steady-predict104.json  memprof-item2-true-steady-predict104.json  memprof-mac-post-trim.json  memprof-pilot-1700.json  memprof-pilot2-1700.json  memprof-trim-1700.json  memprof-trim-3400.json  memprof-trim-5100.json  memprof-trim-full-6796.json
memprof-out-pretrim-mac/: growth-summary.json  harness-growth-1700.json  harness-growth-3400.json  harness-growth-5100.json  harness-growth-6796.json  memprof-growth-1700.json  memprof-growth-3400.json  memprof-growth-5100.json  memprof-growth-6796.json
patches/: 01-fix-refresh-cycle-passes-store-anchored.patch  02-measurement-wiring-C-VPREDICT_FORCE_RET.patch  03-measurement-wiring-D-VPREDICT_STORE_LIM.patch  04-measurement-wiring-E-VPREDICT_WORKSPACE.patch  (+10 more)
(+53 files in other folders)
