[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vpredict"
version = "0.1.0"
description = "Calibrated win-probability model for professional Valorant matches"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/vpredict"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
